# DFProject2

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  certification_requirements.md  developer readme.md  github-setup.md  package-lock.json  package.json  requirements.txt  task-master.config.json  tdoa_direction_finder_prd.txt
docs/workflow/: developer-guide.md
examples/: CMakeLists.txt  multilateration_example.cpp  time_sync_example.cpp
memory-bank/: activeContext.md  productContext.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: task-complexity-report.json
scripts/automation/: task-workflow.js
scripts/validation/: compliance-rules.js
src/auth/: auth_system.cpp  auth_system.h
src/auth/test/: test_auth_system.cpp
src/config/: config_manager.cpp  config_manager.h
src/config/test/: test_config_manager.cpp
src/database/: report_generator.cpp  report_generator.h  signal_db_manager.cpp  signal_db_manager.h  signal_db_schema.h  signal_query_interface.cpp  signal_query_interface.h
src/database/test/: test_report_generator.cpp  test_signal_db.cpp  test_signal_query_interface.cpp
src/devices/: CMakeLists.txt  signal_source_factory.cpp  signal_source_factory.h  signal_source_factory_test.cpp
src/devices/gps/: CMakeLists.txt  gps_device.h  gps_device_factory.cpp  gpsd_device.cpp  gpsd_device.h
src/devices/signalhound/: CMakeLists.txt  README.md  bb60c_abstract_device.cpp  bb60c_abstract_device.h  bb60c_abstract_device_test.cpp  bb60c_device.cpp  bb60c_device_test.cpp
src/monitor/: node_monitor.cpp  node_monitor.h
src/monitor/test/: test_node_monitor.cpp
src/signal_flow/: parallel_engine.cpp  parallel_engine.h  parallel_signal_detector.cpp  parallel_signal_detector.h  processing_chain.cpp  processing_chain.h  processing_component.cpp  processing_component.h  processing_state.cpp  processing_state.h  resource_manager.cpp  resource_manager.h  signal.cpp  signal.h  signal_classifier.cpp  signal_classifier.h  signal_factory.cpp  signal_factory.h  signal_flow.cpp  signal_flow.h  signal_metadata.cpp  signal_metadata.h  signal_prioritizer.cpp  signal_prioritizer.h  signal_quality_analyzer.cpp  signal_quality_analyzer.h  signal_tracker.cpp  signal_tracker.h
src/signal_flow/test/: test_parallel_detector.cpp  test_signal_classifier.cpp  test_signal_quality_analyzer.cpp  test_signal_tracker.cpp
src/tdoa/: CMakeLists.txt
src/tdoa/correlation/: correlation_peak.cpp  cross_correlation.cpp  cross_correlation.h  window_functions.cpp
src/tdoa/multilateration/: CMakeLists.txt  multilateration_solver.cpp  multilateration_solver.h
src/tdoa/tests/: CMakeLists.txt  test_cross_correlation.cpp  test_time_difference_extractor.cpp
src/tdoa/time_difference/: CMakeLists.txt  time_difference_extractor.cpp  time_difference_extractor.h
src/tdoa/utils/: CMakeLists.txt
src/time_sync/: CMakeLists.txt  allan_variance.h  gps_time_sync.cpp  gps_time_sync.h  kalman_filter.h  temperature_compensation.h  time_reference_protocol.cpp  time_reference_protocol.h  time_sync_factory.cpp  time_sync_interface.h  udp_transport.cpp  udp_transport.h
src/ui/: CMakeLists.txt
src/ui/mapping/: CMakeLists.txt  map_display.cpp  map_display.h  signal_marker.cpp  signal_marker.h  tile_config.h.in  tile_coverage.cpp  tile_coverage.h  tile_manager.cpp  tile_manager.h  tile_server.cpp  tile_server.h  tile_source.cpp  tile_source.h
src/ui/mapping/test/: CMakeLists.txt  test_map_display.cpp  test_measurement_tools.cpp  test_signal_display.cpp  test_tile_coverage.cpp  test_tile_server.cpp  test_tile_sources.cpp
src/ui/mapping/web/: index.html
src/ui/spectrum_analyzer/: CMakeLists.txt  measurement_tools.cpp  measurement_tools.h  shader_program.cpp  shader_program.h  spectrum_analyzer.cpp  spectrum_analyzer.h  spectrum_display.cpp  spectrum_display.h  waterfall_display.cpp  waterfall_display.h
templates/do178c-template/: README.md
templates/do178c-template/scripts/: validate.js
templates/task-templates/: dev1-architecture.md  dev2-cuda.md
